Last part of list one

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href="src/css/main.css"> 
+    <link rel='stylesheet' href="src/css/main.css">
+    <link rel="icon" type="image/x-icon" href="src/Icons/logo.svg">
     <title>The red Fox</title>
 </head>
 
@@ -23,7 +24,7 @@
         <!-- Page 1 -->
         <div class="Page--1">
             <div class="Hero">
-                <t>Если у тебя нет лисы, значит у кого-то их две</t>
+                <p>Если у тебя нет лисы, значит у кого-то их две</p>
             </div>
             <div>
                 <button>Смотреть!</button>
@@ -65,10 +66,23 @@
                 <h1>Ареал обитания</h1>
             </div>
             <div class="Hero--3">
-                <img>
-                <button><img></button>
-                <button><img></button>
-                <button><img></button>
+                <div class="map">
+
+                </div>
+                <div class="Hero--3-1">
+                    <p>Лисица заселяет практически все природные зоны: леса, тундру, степь, засушливые области.<br>Нет её только в арктических пустынях крайнего севера</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="Footer">
+            <div class="Footer-1">
+                <button onclick="window.location.href=' https://www.vhutein.ru/'" class="btn logo2"></button>
+                <div class="Footer-3">
+                    <button onclick="window.location.href=' https://vk.com/vhutein'" class="btn vk"></button>
+                    <button onclick="window.location.href=' https://dzen.ru/id/5ed76fc12625bc1747b150ba'" class="btn dzen"></button>
+                    <button onclick="window.location.href=' https://web.telegram.org/k/#@vhutein'" class="btn tg"></button>
+                </div>
             </div>
         </div>
     </body>
