--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button onclick="window.location.href=' index.html'"
                 class="btn" src="src/Icons/logo.svg"></button>
                 <ul>
-                    <li><a href="index.html">Главная</a></li>
+                    <button id="scroll-down-btn" class="">Ареал</button>
                     <li><a href="structure.html">Строение</a></li>
                     <li><a href="friends.html">Друзья и враги</a></li>
                 </ul>
@@ -77,7 +77,7 @@
                     class="btn img-3"></button>
                 </div>
                 <div class="Hero--3-1">
-                    <p>Лисица заселяет практически все природные зоны: леса, тундру, степь, засушливые области.<br>Нет её только в арктических пустынях крайнего севера</p>
+                    <p>Лисица заселяет: леса, тундру, степь, засушливые области.<br>Нет её только в арктических пустынях крайнего севера</p>
                 </div>
             </div>
         </div>
