--- a/structure.html
+++ b/structure.html
@@ -51,7 +51,7 @@
     <div class="Page--3">
         <h1>Питание</h1>
         <div class="Hero--3">
-            <p>Лисица — всеядное животное. Её рацион зависит от места обитания. Основу питания составляют грызуны. Также лисица ест зайцев и птиц, в основном мелких воробьиных, куриных, а так же рыбу</p>
+            <p>Лисица — всеядное животное. <br>Её рацион зависит от места обитания. Основу питания составляют грызуны. Также лисица ест зайцев и птиц,<br>в основном мелких воробьиных, куриных, а так же рыбу</p>
         </div>
     </div>
     
