--- a/structure.html
+++ b/structure.html
@@ -12,7 +12,7 @@
                 <button onclick="window.location.href=' index.html'"
                 class="btn" src="src/Icons/logo.svg"></button>
                 <ul>
-                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/Лисица">Wiki</a></li>
                     <li><a href="structure.html">Строение</a></li>
                     <li><a href="friends.html">Друзья и враги</a></li>
                 </ul>
