--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                 <button onclick="window.location.href=' index.html'"
                 class="btn" src="src/Icons/logo.svg"></button>
                 <ul>
-                    <button id="scroll-down-btn" class="">Ареал</button>
+                    <li><a href="https://ru.wikipedia.org/wiki/Лисица">Wiki</a></li>
                     <li><a href="structure.html">Строение</a></li>
                     <li><a href="friends.html">Друзья и враги</a></li>
                 </ul>
-        </header>
+    </header>
         
         <!-- Page 1 -->
         <div class="Page--1">
